--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
-upload_speed = 1000000    
+; upload_speed = 921600    
 build_flags =
     -DCORE_DEBUG_LEVEL=0
 lib_deps = 
